update footer API link and readme files

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <script type="text/javascript" src="javascript/news.js"></script>
     <script type="text/javascript" src="javascript/drink.js"></script>
 
-<!-- >>>>>>> master -->
-   <title>Hungry at Home</title>
+    <!-- >>>>>>> master -->
+    <title>Hungry at Home</title>
 </head>
 
 <body>
@@ -54,74 +54,74 @@
         <div id="col2" class="col s12 l6">
             <h3>What are you hungry for?</h3>
             <form id="search-food" action="">
-               <input id="input-food" type="text" class="recipes" placeholder="pizza">
-               <button id="submit-f" class="btn waves-effect waves light" type="submit">search</button>
+                <input id="input-food" type="text" class="recipes" placeholder="pizza">
+                <button id="submit-f" class="btn waves-effect waves light" type="submit">search</button>
             </form>
             <div id="user-food"></div>
         </div>
         <!-- Drinks -->
         <div id="col3" class="col s12 l3">
-           <h3>Quick drink generator!</h3>
-           <form id="search-drink" action="">
-              <input id="input-drink" type="text" class="drink" placeholder="vodka">
-              <button id="submit-d" class="btn waves-effect waves light" type="submit">search</button>
+            <h3>Quick drink generator!</h3>
+            <form id="search-drink" action="">
+                <input id="input-drink" type="text" class="drink" placeholder="vodka">
+                <button id="submit-d" class="btn waves-effect waves light" type="submit">search</button>
             </form>
             <div id="user-drink"></div>
-        <!-- >>>>>>> master -->
+            <!-- >>>>>>> master -->
         </div>
     </main>
-    </body>
+</body>
 
-    <!-- footer below -->
-	<footer class="page-footer">
-		<div class="row container">
-			<div id="credits" class="col m4">
-                <h3>Credits</h3>
-                <div>
-                    <a href="https://spoonacular.com/food-api" target="_blank">Spoonacular</a>
-                    <a href="https://www.thecocktaildb.com" target="_blank">The Cocktail DB</a>
-                    <a href="http://newsapi.org" target="_blank">News</a>
-                </div>
-			</div>
-			<div id="connect" class="col m4">
-                <h3>Connect</h3>
-                <div id="connect-box">
-                    <a href="https://www.facebook.com/" class="social-icons" target="_blank">
-                        <img src="./images/facebook.svg" alt="">
-                    </a>
-                    <a href="https://twitter.com/" class="social-icons" target="_blank">
-                        <img src="./images/twitter.svg" alt="">
-                    </a>
-                    <a href="https://www.pinterest.com/" class="social-icons" target="_blank">
-                        <img src="./images/pinterest.svg" alt="">
-                    </a>
-                    <a href="https://www.instagram.com/" class="social-icons" target="_blank">
-                        <img src="./images/instagram.svg" alt="">
-                    </a>
-                </div>
-			</div>
-			<div id="links" class="col m4">
-                <h3>Quick links</h3>
-                <div>
-                    <a href="#col3">drinks</a>
-                    <a href="#col2">recipes</a>
-                    <a href="#col1">news</a>
-                </div>
-			</div>
-			</div>
-		</div>
-		<div class="footer-copyright row">
-			<div class="copyright">
-				<p>© 2020 Copyright Text</p>
-			</div>
-		</div>
-    </footer>
-    <script type="text/javascript"
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuo0rTUgiaPbMCt8xpsTfApkdzfgH0y_8&libraries=places"></script>
+<!-- footer below -->
+<footer class="page-footer">
+    <div class="row container">
+        <div id="credits" class="col m4">
+            <h3>Credits</h3>
+            <div>
+                <a href="https://spoonacular.com/food-api" target="_blank">Spoonacular</a>
+                <a href="https://www.thecocktaildb.com" target="_blank">The Cocktail DB</a>
+                <a href="https://rapidapi.com/microsoft-azure-admin/api/bing-news-search" target="_blank">News</a>
+            </div>
+        </div>
+        <div id="connect" class="col m4">
+            <h3>Connect</h3>
+            <div id="connect-box">
+                <a href="https://www.facebook.com/" class="social-icons" target="_blank">
+                    <img src="./images/facebook.svg" alt="">
+                </a>
+                <a href="https://twitter.com/" class="social-icons" target="_blank">
+                    <img src="./images/twitter.svg" alt="">
+                </a>
+                <a href="https://www.pinterest.com/" class="social-icons" target="_blank">
+                    <img src="./images/pinterest.svg" alt="">
+                </a>
+                <a href="https://www.instagram.com/" class="social-icons" target="_blank">
+                    <img src="./images/instagram.svg" alt="">
+                </a>
+            </div>
+        </div>
+        <div id="links" class="col m4">
+            <h3>Quick links</h3>
+            <div>
+                <a href="#col3">drinks</a>
+                <a href="#col2">recipes</a>
+                <a href="#col1">news</a>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="footer-copyright row">
+        <div class="copyright">
+            <p>© 2020 Copyright Text</p>
+        </div>
+    </div>
+</footer>
+<script type="text/javascript"
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuo0rTUgiaPbMCt8xpsTfApkdzfgH0y_8&libraries=places"></script>
 
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuo0rTUgiaPbMCt8xpsTfApkdzfgH0y_8&callback=initMap"
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuo0rTUgiaPbMCt8xpsTfApkdzfgH0y_8&callback=initMap"
         async defer></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 
 
